--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,7 +4,12 @@ pipeline {
     stages {
         stage('RUN KUBECTL COMMAND') {
             steps {
-                sh 'kubectl get ns'
+                scripts {
+                    withKubeConfig(caCertificate: '', clusterName: 'dev-eks', contextName: '', credentialsId: 'kubernetes-credentials', namespace: 'default', restrictKubeConfigAccess: false, serverUrl: '') 
+                    {
+                        sh 'kubectl get ns'
+                    }
+                }
             }
         }
     }
