--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
     stages {
         stage('RUN KUBECTL COMMAND') {
             steps {
-                    withKubeConfig(caCertificate: '', clusterName: '', contextName: '', credentialsId: 'kubernetes-credentials', namespace: '', restrictKubeConfigAccess: false, serverUrl: '') {
+                    withKubeConfig(caCertificate: '', clusterName: '', contextName: '', credentialsId: 'kubernetes-credentials', namespace: '', restrictKubeConfigAccess: false, serverUrl: '')
                     {
                         sh 'kubectl get ns'
                     }
